--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
+    "hexo-generator-robotstxt": "^0.2.0",
+    "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-babel": "^0.1.3",
     "hexo-renderer-ejs": "^0.3.0",
