--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "hexo-fontawesome": "^1.1.1",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
+    "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.0",
+    "hexo-generator-podcast": "^2.0.1",
     "hexo-generator-robotstxt": "^0.2.0",
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
