--- a/themes/quebradev/_config.yml
+++ b/themes/quebradev/_config.yml
@@ -9,12 +9,14 @@ google_analytics: UA-119134705-1
 footer_links:
   twitter:
     link: https://twitter.com/quebradev
-  github:
-    link: https://github.com/QuebraDev
+  spotify:
+    link: https://open.spotify.com/show/5uR2MAyQ7Ud1xGo19evGRp?si=TSjo2SsnTC6B1cf4SHosVA
   soundcloud:
     link: https://soundcloud.com/quebradev
   youtube:
     link: https://www.youtube.com/channel/UCcC9BomrjB8nM4WwGXxAkgg
+  github:
+    link: https://github.com/QuebraDev
 
 node_sass:
   outputStyle: compressed
