adiciona o link do itunes e corrige a paginação da pagina inicial

--- a/themes/quebradev/_config.yml
+++ b/themes/quebradev/_config.yml
@@ -13,6 +13,8 @@ footer_links:
     link: https://open.spotify.com/show/5uR2MAyQ7Ud1xGo19evGRp?si=TSjo2SsnTC6B1cf4SHosVA
   soundcloud:
     link: https://soundcloud.com/quebradev
+  itunes:
+    link: https://itunes.apple.com/br/podcast/quebradev/id1385870497
   youtube:
     link: https://www.youtube.com/channel/UCcC9BomrjB8nM4WwGXxAkgg
   github:
