correções na descrição do quebradev e endereço do linkedin

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: QuebraDev
 subtitle: O podcast perifatécnico.
-description: Um podcast de origem periférica e com destino voltado à origem.
+description: Um movimento social que tem como objetivo democratizar a informação para periferia.
 keywords: tecnologia, periferia, comunidade, quebrada, desenvolvimento, conhecimento, programação, podcast, backend, back-end, frontend, front-end
 author: QuebraDev
 language: pt-br
