--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "hexo-site",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "dev": "hexo server"
+  },
   "hexo": {
     "version": "3.8.0"
   },
