--- a/themes/quebradev/_config.yml
+++ b/themes/quebradev/_config.yml
@@ -19,6 +19,10 @@ footer_links:
     link: https://www.youtube.com/channel/UCcC9BomrjB8nM4WwGXxAkgg
   github:
     link: https://github.com/QuebraDev
+support_links:
+  alura:
+    link: 'https://www.alura.com.br/cursos-online-programacao?utm_source=quebradev&utm_medium=cpc'
+    height: 25
 
 types:
   tecnologia: 
