--- a/themes/quebradev/_config.yml
+++ b/themes/quebradev/_config.yml
@@ -10,7 +10,7 @@ footer_links:
   twitter:
     link: https://twitter.com/quebradev
   spotify:
-    link: https://open.spotify.com/show/5uR2MAyQ7Ud1xGo19evGRp?si=TSjo2SsnTC6B1cf4SHosVA
+    link: https://open.spotify.com/show/1NT08wgK2hTh27mvMiVszh
   itunes:
     link: https://itunes.apple.com/br/podcast/quebradev/id1385870497
   youtube:
