--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: quebradev
+theme: jekyll-theme-cayman
 
 sitemap:
   path: sitemap.xml
