--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: QuebraDev
 subtitle: O podcast perifatécnico.
-description: Um movimento social que tem como objetivo democratizar a informação para a periferia.
+description: Um coletivo que tem como objetivo democratizar a informação para a periferia.
 keywords: tecnologia, periferia, comunidade, quebrada, desenvolvimento, conhecimento, programação, podcast, backend, back-end, frontend, front-end
 author: QuebraDev
 language: pt-br
