--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,8 @@ skip_render:
 new_post_name: :title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
-external_link: true # Open external links in new tab
+external_link:
+  enable: true
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
@@ -43,16 +44,16 @@ highlight:
   line_number: true
   auto_detect: false
   tab_replace:
-  
+
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
-  path: ''
+  path: ""
   per_page: 100
   order_by: -date
-  
+
 # Category & Tag
 default_category: uncategorized
 category_map:
