--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: QuebraDev
 subtitle: O podcast perifatécnico.
-description: Um movimento social de origem periférica com destino voltado a origem.
+description: Um coletivo de tecnologia de origem periférica com destino voltado a origem.
 keywords: tecnologia, periferia, comunidade, quebrada, desenvolvimento, conhecimento, programação, podcast, backend, back-end, frontend, front-end
 author: QuebraDev
 language: pt-br
