--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.0",
+    "cors": "^2.8.5",
     "font-awesome": "^4.7.0",
     "hexo": "^6.3.0",
     "hexo-all-minifier": "^0.5.7",
